fix spacing around dad in about

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -298,6 +298,8 @@ summary:hover {
 
 #dad-profile, h4 {
   color: rgb(249, 207, 56);
+  margin: 0;
+  padding: 0;
 }
 
 #nav-avatar-div {
